# dihedral

./: .gitignore  CMakeLists.txt  README.md  driver.c
linalg/: CMakeLists.txt
linalg/include/: dihedral.h  pdb.h
linalg/include/dihedral/: amino_acid.h  point.h
linalg/include/linalg/: vector.h
linalg/src/: amino_acid.c  dihedral.c  pdb.c  point.c  vector.c
linalg/test/: CMakeLists.txt  test_dihedral.c  test_pdb.c  test_point.c  test_vector.c
